# MVCCART

./: ARTCorrectnessTests.cpp  ARTFULCpp.h  AdaptiveRadixTreeTable.h  ArtCPP.cpp  ArtCPP.h  ArtCPP.hpp  CMakeCache.txt  CMakeLists.txt  CMakeLists_Production.txt  MVCCARTTest.cpp  MVCCTests.cpp  Makefile  Readme.Md  ScaleTestsReadOnly.cpp  art.c  art.h  cmake_install.cmake  logfile.out  main.cpp  mvcc.hpp  mvccart  mvccart.cbp  settings.h.in  transactionManager.cpp  transactionManager.h
ART/: ARTFULCpp.h  ArtCPP.hpp
CorrectnessTests/: ARTCorrectnessDeletes.cpp  ARTCorrectnessInsertions.cpp  ARTCorrectnessIterators.cpp  ARTCorrectnessTests.cpp  ARTCorrectnessUpdateWhere.cpp  ARTCorrectnessUpdates.cpp  MVCCARTTest.cpp  MVCCTests.cpp  MainTest.cpp  ScaleTestsReadOnly.cpp  main.cpp
Transactions/: Epochs.hpp  GlobalEpoch.hpp  ReadIntensiveTemplates.h  ReadOnlyTemplates.h  TransactionTemplates.h  UpdateIntensiveTemplates.h  UpdateIntensiveTemplates.hpp  UpdateIntensiveTemplatesGC.hpp  WriteOnlyTemplates.h  transactionManager.h
WorkloadTests/: ReadIntensive.cpp  ReadOnly.cpp  SnapshotIsolation.cpp  UpdateIntensive.cpp  UpdateIntensiveGC.cpp  WriteOnly.cpp
core/: PFabricTypes.hpp  Tuple.hpp
core/parser/: StringAttributeParser.hpp
fmt-master/: FMT.cbp
libcpp/types/: types.hpp
libcpp/types/detail/: TupleType.hpp
mvcc/: mvcc.hpp  snapshot.hpp
mvccart.dSYM/Contents/: Info.plist
mvccart.dSYM/Contents/Resources/DWARF/: mvccart
table/: BaseTable.hpp  HashMapTable.hpp  HashMapTableTest.cpp  Table.hpp  TableException.hpp
test_data/: words.txt  words2.txt  words3.txt  words50K1.txt  words50K1_2.txt  words50k.txt  words50k2.txt
